<resources>
    <string name="app_name">InHouse</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ground_floor">First floor</string>
    <string name="first_floor">Second floor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem_ipsum_5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis volutpat urna. Duis pellentesque ante vitae laoreet ullamcorper. Donec placerat ornare quam non scelerisque. Fusce varius magna ut augue dapibus, at lacinia tellus tristique. In sit amet mauris vel justo convallis congue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas varius ligula vel aliquet porta. Mauris mattis commodo pulvinar.

Pellentesque vel massa vel turpis congue ornare non id lacus. Duis vehicula metus odio, nec rutrum augue convallis vel. Nulla facilisi. Pellentesque facilisis quis lectus tincidunt pulvinar. Aenean vel lectus quis dui gravida efficitur vitae id mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas quis dapibus ligula. Nulla tincidunt purus vitae ex ultrices, in rutrum diam scelerisque. Maecenas et metus non sapien placerat condimentum. Curabitur ipsum risus, rutrum eget sagittis dapibus, tempus at sapien. Donec in purus suscipit, consectetur mauris finibus, porttitor augue. Sed non quam a enim vehicula blandit.

Phasellus finibus turpis ornare lorem vulputate, ac dignissim massa imperdiet. Donec ipsum turpis, consectetur sed orci auctor, ullamcorper aliquam velit. Donec non massa vel turpis venenatis pretium vel ac ligula. Mauris porta ante eu mi placerat rutrum. Curabitur gravida porttitor lectus sit amet porttitor. Praesent commodo velit mauris, non lacinia arcu aliquam vel. Proin tincidunt tortor at lectus ultricies, eu pellentesque elit ultrices. Donec nisl mauris, ornare pharetra semper sed, iaculis non mauris. Aliquam sagittis odio et consequat congue. Etiam id posuere nibh. Cras cursus orci erat, nec lobortis nisl commodo sed. Maecenas eros tortor, tristique a dui interdum, convallis facilisis arcu. Integer augue tellus, bibendum eget nibh in, egestas tempor lorem. Sed tristique id ante ullamcorper sagittis. Praesent non tortor non ipsum tincidunt malesuada.

Praesent porta magna sed leo pulvinar molestie. Proin dictum porta sem euismod suscipit. Sed efficitur mollis augue, ac vestibulum nulla euismod et. Duis tincidunt est eu sem tincidunt hendrerit. Mauris sit amet molestie dui. Integer porta tellus tellus, non semper ante finibus nec. Nunc tempus pretium nisi vel sodales. Morbi facilisis, felis id malesuada dapibus, diam dolor malesuada felis, in luctus ante velit vitae metus. Curabitur faucibus tincidunt mauris quis consequat. Aenean nec sem dictum risus ornare iaculis.

Aliquam vel eros tellus. Aenean ultricies fringilla risus ac consequat. Donec maximus eleifend purus vel sollicitudin. Sed lacus metus, consectetur auctor leo nec, fermentum scelerisque nisl. Donec nisi odio, euismod sed erat ut, tincidunt commodo sem. Cras in auctor augue, quis ullamcorper magna. Nullam vulputate risus quis enim consequat lobortis. Pellentesque non sollicitudin lorem, eu dignissim mi. Integer fermentum ultrices pretium.</string>
    <string name="one_room_curr_temp">Now %1$s&#8451;</string>
    <string name="one_room_set_temp">%1$s&#8451;</string>
    <string name="setting_api_address_key">APIADDR</string>
    <string name="setting_api_address_default">7a888d95.ngrok.io</string>
    <string name="shared_prefs_name">sharedprefs</string>

    <string name="stats_spinner_temp">Temperature</string>
    <string name="stats_spinner_lights">Lights</string>
    <string name="stats_spinner_power">Power</string>
    <string-array name="stats_spinner_array">
        <item>@string/stats_spinner_temp</item>
        <item>@string/stats_spinner_lights</item>
        <item>@string/stats_spinner_power</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="saved_username_key">username_key</string>
    <string name="saved_password_key">key_password</string>
    <string name="inside">Inside</string>
    <string name="outside">Outside</string>
    <string name="eula"><b>End-User License Agreement for InHouse ZPI Team</b> \n
This End-User License Agreement (EULA) is a legal agreement between you (either an individual or a single entity) and the mentioned author (ZPI Team: Michał Karol, Aleksandra Kozieł, Wojciech Liebert, Anton Vlasiuk) of this Software for the software product identified above, which includes computer software and may include associated media, printed materials, and “online” or electronic documentation (“SOFTWARE PRODUCT”).
By installing, copying, or otherwise using the SOFTWARE PRODUCT, you agree to be bounded by the terms of this EULA.
If you do not agree to the terms of this EULA, do not install or use the SOFTWARE PRODUCT.\n
<b>SOFTWARE PRODUCT LICENSE</b>\n
InHouse is being distributed as freeware for personal, commercial use, non-profit organization, educational purpose. It may be included with Google Play Store distributions. You are NOT allowed to make a charge for distributing this Software (either for profit or merely to recover your media and distribution costs) whether as a stand-alone product, or as part of a compilation or anthology, nor to use it for supporting your house.
\n1. GRANT OF LICENSE. This EULA grants you the following rights: Installation and Use. You may install and use an unlimited number of copies of the SOFTWARE PRODUCT.
Reproduction and Distribution. You may reproduce and distribute an unlimited number of copies of the SOFTWARE PRODUCT; provided that each copy shall be a true and complete copy, including all copyright and trademark notices, and shall be accompanied by a copy of this EULA.
\nCopies of the SOFTWARE PRODUCT may be distributed as a standalone product or included with your own product as long as The SOFTWARE PRODUCT is not sold or included in a product or package that intends to receive benefits through the inclusion of the SOFTWARE PRODUCT.
The SOFTWARE PRODUCT may be included in any free or non-profit packages or products.
\n2. DESCRIPTION OF OTHER RIGHTS AND LIMITATIONS.
\nLimitations on Reverse Engineering, Decompilation, Disassembly and change (add,delete or modify) the resources in the compiled the assembly. You may not reverse engineer, decompile, or disassemble the SOFTWARE PRODUCT, except and only to the extent that such activity is expressly permitted by applicable law notwithstanding this limitation.
\nUpdate and Maintenance
\nInHouse upgrades are FREE of charge.
\nSeparation of Components.
\nThe SOFTWARE PRODUCT is licensed as a single product. Its component parts may not be separated for use on more than one computer.
\nSoftware Transfer.
\nYou may permanently transfer all of your rights under this EULA, provided the recipient agrees to the terms of this EULA.
\nTermination.
\nWithout prejudice to any other rights, the Author of this Software may terminate this EULA if you fail to comply with the terms and conditions of this EULA. In such event, you must destroy all copies of the SOFTWARE PRODUCT and all of its component parts.
\n3. COPYRIGHT.
\nAll title and copyrights in and to the SOFTWARE PRODUCT (including but not limited to any images, photographs, clipart, libraries, and examples incorporated into the SOFTWARE PRODUCT), the accompanying printed materials, and any copies of the SOFTWARE PRODUCT are owned by the Author of this Software. The SOFTWARE PRODUCT is protected by copyright laws and international treaty provisions. Therefore, you must treat the SOFTWARE PRODUCT like any other copyrighted material. The licensed users or licensed company can use all functions, example, templates, clipart, libraries and symbols in the SOFTWARE PRODUCT to create new diagrams and distribute the diagrams.
\nLIMITED WARRANTY
\nNO WARRANTIES.
\nThe Authora of this Software expressly disclaims any warranty for the SOFTWARE PRODUCT. The SOFTWARE PRODUCT and any related documentation is provided “as is” without warranty of any kind, either express or implied, including, without limitation, the implied warranties or merchantability, fitness for a particular purpose, or noninfringement. The entire risk arising out of use or performance of the SOFTWARE PRODUCT remains with you.
\nNO LIABILITY FOR DAMAGES.
\nIn no event shall the author of this Software be liable for any special, consequential, incidental or indirect damages whatsoever (including, without limitation, damages for loss of business profits, business interruption, loss of business information, or any other pecuniary loss) arising out of the use of or inability to use this product, even if the Author of this Software is aware of the possibility of such damages and known defects.

</string>
    <string name="on_s">On</string>
    <string name="off_s">Off</string>
</resources>
