<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="zpi.pls.zpidominator2000.MainActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/home_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:text="My awesome home"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewWeatherOutside"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/cardViewName"
        app:layout_constraintTop_toBottomOf="@+id/cardViewName">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/weatherTemperatureOutside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="21 °C"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/weatherImage"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/weatherTemperatureOutside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sun_icon" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewRoomInfo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/cardViewName"
        app:layout_constraintStart_toStartOf="@+id/cardViewName"
        app:layout_constraintTop_toBottomOf="@+id/cardViewName">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@android:color/transparent">

            <ProgressBar
                android:id="@+id/progressBar_room_card"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_room"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/floor_info_room_name"
                android:layout_width="143dp"
                android:layout_height="63dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:lines="3"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_room"
                app:layout_constraintHorizontal_bias="0.421"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.512"
                tools:text="ROOM" />

            <TextView
                android:id="@+id/floor_info_room_temp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Inside"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/floor_info_room_temp"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="@+id/floor_info_room_temp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/floor_info_room_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="21.9 °C"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/floor_info_room_settemp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/floor_info_room_temp_label"
                app:layout_constraintStart_toStartOf="@+id/guideline_room"
                app:layout_constraintTop_toBottomOf="@+id/floor_info_room_temp_label"
                tools:text="21.9 °C" />

            <TextView
                android:id="@+id/floor_info_room_settemp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Setpoint"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/floor_info_room_settemp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/floor_info_room_settemp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Setpoint" />

            <TextView
                android:id="@+id/floor_info_room_settemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="22.2 °C"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/floor_info_room_temp"
                app:layout_constraintTop_toBottomOf="@+id/floor_info_room_settemp_label"
                tools:text="22.2 °C" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Group
                android:id="@+id/group_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="floor_info_room_temp,floor_info_room_settemp_label,floor_info_room_settemp,floor_info_room_temp_label" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewFloorInfo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:visibility="gone"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/cardViewName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardViewName"
        app:layout_constraintTop_toBottomOf="@+id/cardViewName">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@android:color/transparent">

            <ProgressBar
                android:id="@+id/progressBar_floor_card"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_floor"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/floor_info_idunno_name"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:lines="3"
                android:text="House"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_floor"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/floor_info_floor_temp_label"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/inside"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/floor_info_floor_temp"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="@+id/floor_info_floor_temp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/floor_info_floor_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:text="21.3 °C"

                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/floor_info_outside_temp_val"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline_floor"
                app:layout_constraintTop_toBottomOf="@+id/floor_info_floor_temp_label"
                app:layout_constraintVertical_bias="0.17"
                tools:text="21.3 °C" />

            <TextView
                android:id="@+id/floor_info_outside_temp_label"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginTop="16dp"
                android:text="@string/outside"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/floor_info_outside_temp_val"
                app:layout_constraintHorizontal_bias="0.312"
                app:layout_constraintStart_toStartOf="@+id/floor_info_outside_temp_val"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Outside" />

            <TextView
                android:id="@+id/floor_info_outside_temp_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="22.1 °C"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/floor_info_floor_temp"
                app:layout_constraintTop_toBottomOf="@+id/floor_info_outside_temp_label"
                app:layout_constraintVertical_bias="0.187"
                tools:text="22.1 °C" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_floor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Group
                android:id="@+id/group_floor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="floor_info_outside_temp_val,floor_info_outside_temp_label,floor_info_floor_temp,floor_info_floor_temp_label" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <include
        android:id="@+id/include_floor"
        layout="@layout/parter_layout"
        android:layout_marginTop="150dp"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewWeatherOutside">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/floorTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/ground_floor"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>